vcs/specs/parser/fail/async/invalid_spawn_without_expr.vr
// @test: parse-fail
// @level: L0
// @tags: parser, async, spawn, error
// @description: Test spawn without expression
// @expected-error: E048

async fn test() {
    spawn;
}
